{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 11,
  "lineage": "62372129-7ecc-8434-c686-ca7101bb55f7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "service_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:873715421885:targetgroup/service-lb-tg/2cc7677c1ffd10e9",
            "arn_suffix": "targetgroup/service-lb-tg/2cc7677c1ffd10e9",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:873715421885:targetgroup/service-lb-tg/2cc7677c1ffd10e9",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "service-lb-tg",
            "port": 9100,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Project": "https://github.com/guitou4573/exercise"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0c7c3090d43040981"
          },
          "dependencies": [
            "module.exercise_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "service_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "service_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:873715421885:security-group/sg-00d92c4c36f6d3ca2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00d92c4c36f6d3ca2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "security_group_for_lb",
            "name_prefix": "",
            "owner_id": "873715421885",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Project": "https://github.com/guitou4573/exercise"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c7c3090d43040981"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.exercise_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:873715421885:security-group/sg-07ab060362df78ae0",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-07ab060362df78ae0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9100
              }
            ],
            "name": "security_group_for_service",
            "name_prefix": "",
            "owner_id": "873715421885",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Project": "https://github.com/guitou4573/exercise"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c7c3090d43040981"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.exercise_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.exercise_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06cccec85b682c112",
            "domain": "vpc",
            "id": "eipalloc-06cccec85b682c112",
            "network_border_group": "us-west-1",
            "private_dns": "ip-10-0-101-138.us-west-1.compute.internal",
            "public_dns": "ec2-13-57-125-204.us-west-1.compute.amazonaws.com",
            "public_ip": "13.57.125.204",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "exercise-vpc-us-west-1a"
            },
            "tags_all": {
              "Name": "exercise-vpc-us-west-1a",
              "Project": "https://github.com/guitou4573/exercise"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0abcacb5d0d0efa65",
            "domain": "vpc",
            "id": "eipalloc-0abcacb5d0d0efa65",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-54-241-54-191.us-west-1.compute.amazonaws.com",
            "public_ip": "54.241.54.191",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "exercise-vpc-us-west-1b"
            },
            "tags_all": {
              "Name": "exercise-vpc-us-west-1b",
              "Project": "https://github.com/guitou4573/exercise"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.exercise_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:873715421885:internet-gateway/igw-01339bf3982b18029",
            "id": "igw-01339bf3982b18029",
            "owner_id": "873715421885",
            "tags": {
              "Name": "exercise-vpc"
            },
            "tags_all": {
              "Name": "exercise-vpc",
              "Project": "https://github.com/guitou4573/exercise"
            },
            "vpc_id": "vpc-0c7c3090d43040981"
          },
          "dependencies": [
            "module.exercise_vpc.aws_vpc.this",
            "module.exercise_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.exercise_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06cccec85b682c112",
            "connectivity_type": "public",
            "id": "nat-0ad5ac4021ca2cb1b",
            "network_interface_id": "eni-0355e8e09c7d9eeea",
            "private_ip": "10.0.101.6",
            "public_ip": "13.57.125.204",
            "subnet_id": "subnet-0942d708501ff333e",
            "tags": {
              "Name": "exercise-vpc-us-west-1a"
            },
            "tags_all": {
              "Name": "exercise-vpc-us-west-1a",
              "Project": "https://github.com/guitou4573/exercise"
            }
          },
          "dependencies": [
            "module.exercise_vpc.aws_eip.nat",
            "module.exercise_vpc.aws_internet_gateway.this",
            "module.exercise_vpc.aws_subnet.public",
            "module.exercise_vpc.aws_vpc.this",
            "module.exercise_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0abcacb5d0d0efa65",
            "connectivity_type": "public",
            "id": "nat-04cc806c6291f42bd",
            "network_interface_id": "eni-0436290a1615edddf",
            "private_ip": "10.0.101.147",
            "public_ip": "54.241.54.191",
            "subnet_id": "subnet-0942d708501ff333e",
            "tags": {
              "Name": "exercise-vpc-us-west-1b"
            },
            "tags_all": {
              "Name": "exercise-vpc-us-west-1b",
              "Project": "https://github.com/guitou4573/exercise"
            }
          },
          "dependencies": [
            "module.exercise_vpc.aws_eip.nat",
            "module.exercise_vpc.aws_internet_gateway.this",
            "module.exercise_vpc.aws_subnet.public",
            "module.exercise_vpc.aws_vpc.this",
            "module.exercise_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.exercise_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b7dee710cf7a9e061080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ad5ac4021ca2cb1b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b7dee710cf7a9e06",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.exercise_vpc.aws_eip.nat",
            "module.exercise_vpc.aws_internet_gateway.this",
            "module.exercise_vpc.aws_nat_gateway.this",
            "module.exercise_vpc.aws_route_table.private",
            "module.exercise_vpc.aws_subnet.public",
            "module.exercise_vpc.aws_vpc.this",
            "module.exercise_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d0e3423ac48a4fb61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04cc806c6291f42bd",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d0e3423ac48a4fb6",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.exercise_vpc.aws_eip.nat",
            "module.exercise_vpc.aws_internet_gateway.this",
            "module.exercise_vpc.aws_nat_gateway.this",
            "module.exercise_vpc.aws_route_table.private",
            "module.exercise_vpc.aws_subnet.public",
            "module.exercise_vpc.aws_vpc.this",
            "module.exercise_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.exercise_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01339bf3982b18029",
            "id": "r-rtb-02cc4bc426d5095b81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02cc4bc426d5095b8",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.exercise_vpc.aws_internet_gateway.this",
            "module.exercise_vpc.aws_route_table.public",
            "module.exercise_vpc.aws_vpc.this",
            "module.exercise_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.exercise_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:873715421885:route-table/rtb-0b7dee710cf7a9e06",
            "id": "rtb-0b7dee710cf7a9e06",
            "owner_id": "873715421885",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f5e735acb14de461",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "exercise-vpc-private-us-west-1a"
            },
            "tags_all": {
              "Name": "exercise-vpc-private-us-west-1a",
              "Project": "https://github.com/guitou4573/exercise"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c7c3090d43040981"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.exercise_vpc.aws_vpc.this",
            "module.exercise_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:873715421885:route-table/rtb-0d0e3423ac48a4fb6",
            "id": "rtb-0d0e3423ac48a4fb6",
            "owner_id": "873715421885",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "exercise-vpc-private-us-west-1b"
            },
            "tags_all": {
              "Name": "exercise-vpc-private-us-west-1b",
              "Project": "https://github.com/guitou4573/exercise"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c7c3090d43040981"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.exercise_vpc.aws_vpc.this",
            "module.exercise_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.exercise_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:873715421885:route-table/rtb-02cc4bc426d5095b8",
            "id": "rtb-02cc4bc426d5095b8",
            "owner_id": "873715421885",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01339bf3982b18029",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "exercise-vpc-public"
            },
            "tags_all": {
              "Name": "exercise-vpc-public",
              "Project": "https://github.com/guitou4573/exercise"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c7c3090d43040981"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.exercise_vpc.aws_vpc.this",
            "module.exercise_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.exercise_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072c7158b8ed0b7f4",
            "route_table_id": "rtb-02cc4bc426d5095b8",
            "subnet_id": "subnet-0942d708501ff333e"
          },
          "dependencies": [
            "module.exercise_vpc.aws_route_table.public",
            "module.exercise_vpc.aws_subnet.public",
            "module.exercise_vpc.aws_vpc.this",
            "module.exercise_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.exercise_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:873715421885:subnet/subnet-0d73913669a280bfe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d73913669a280bfe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "873715421885",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "exercise-vpc-private-us-west-1b"
            },
            "tags_all": {
              "Name": "exercise-vpc-private-us-west-1b",
              "Project": "https://github.com/guitou4573/exercise"
            },
            "vpc_id": "vpc-0c7c3090d43040981"
          },
          "dependencies": [
            "module.exercise_vpc.aws_vpc.this",
            "module.exercise_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:873715421885:subnet/subnet-05a761735b67e9652",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a761735b67e9652",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "873715421885",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "exercise-vpc-private-us-west-1b"
            },
            "tags_all": {
              "Name": "exercise-vpc-private-us-west-1b",
              "Project": "https://github.com/guitou4573/exercise"
            },
            "vpc_id": "vpc-0c7c3090d43040981"
          },
          "dependencies": [
            "module.exercise_vpc.aws_vpc.this",
            "module.exercise_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.exercise_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:873715421885:subnet/subnet-0942d708501ff333e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0942d708501ff333e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "873715421885",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "exercise-vpc-public-us-west-1a"
            },
            "tags_all": {
              "Name": "exercise-vpc-public-us-west-1a",
              "Project": "https://github.com/guitou4573/exercise"
            },
            "vpc_id": "vpc-0c7c3090d43040981"
          },
          "dependencies": [
            "module.exercise_vpc.aws_vpc.this",
            "module.exercise_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.exercise_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:873715421885:vpc/vpc-0c7c3090d43040981",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0674b5490bc9e0423",
            "default_route_table_id": "rtb-088b4e010b856200f",
            "default_security_group_id": "sg-0dde9b41428025088",
            "dhcp_options_id": "dopt-03878f9ff0fcb9a3c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0c7c3090d43040981",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-088b4e010b856200f",
            "owner_id": "873715421885",
            "tags": {
              "Name": "exercise-vpc"
            },
            "tags_all": {
              "Name": "exercise-vpc",
              "Project": "https://github.com/guitou4573/exercise"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}